# Learned-Rank-Select-ALENEX21

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  comparison.cpp  generate_datasets.cpp  run_all.sh
.github/workflows/: build_test.yml
datasets/: list_5gram_used
include/: array.hpp  benchmark_utils.hpp  datasets_generation_utils.hpp  index_reader.hpp  wrapper_sdsl.hpp
plots/: legend.txt  plot_bars.ipynb  plot_space_time.ipynb
results/: paper_comparison.csv
tests/: CMakeLists.txt  test.cpp
